2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: check for nf_reset
	* src/test/test-sctp_n.c: use PPI 0, adjust timings
	* src/test/test-sctp_t.c: adjust a few timings
	* tests/testsuite-sctp_n.at: test 7.2 passes now
	* src/drivers/sctp2.c:
	  - extensive rework of STREAMS bottom half queueing
	  - extensive rework of STREAMS locking
	  - extensive rework of timers
	  - extensive rework of logging (now uses strlog)

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strsctp.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-sctp.at: testsuite factoring
	* tests/testsuite-sctp_n.at: testsuite factoring
	* tests/testsuite-sctp_n2.at: testsuite factoring
	* tests/testsuite-sctp_t.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo
	* src/drivers/sctp2.c: adjust water marks

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/sctp2.c: support for 2.6.20-1.2307.fc5
	* src/drivers/sctp_cache.c: support for 2.6.20-1.2307.fc5
	* src/drivers/sctp_cache.h: support for 2.6.20-1.2307.fc5
	* src/include/os7.old/queue.h: support for 2.6.20-1.2307.fc5
	* src/modules/tpiperf.c: support for 2.6.20-1.2307.fc5

	* src/drivers/sctp2.c: flush corrections
	* src/drivers/sctp_n.c: flush corrections
	* src/drivers/sctp_t.c: flush corrections
	* src/modules/tpiperf.c: flush corrections

	* src/modules/tpiperf.c: add D_MP flag
